--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidder;
 }
 
 table {
@@ -12,4 +13,5 @@ table {
 
 table td {
     border: 1px solid black;
+    padding: 0.2em;
 }
