--- a/main.css
+++ b/main.css
@@ -5,13 +5,76 @@ body {
     flex-direction: column;
     align-items: center;
     overflow-x: hidder;
+    margin: 0;
+    font-family: Lato, Bitter, Arial;
+    background: #CBCCCE;
 }
 
 table {
-    border: 1px solid black;
+    border: 0.3em solid #770000;
+    border-radius: 2em; 
+    background: #AB946C;
+    padding: 0;
+    border-collapse: collapse;
+    border-style: hidden;
+    box-shadow: 0 0 0 0.3em #770000;
+
+
 }
 
-table td {
-    border: 1px solid black;
-    padding: 0.2em;
+td {
+    border: 0.2em solid #770000;
+    padding: 0.1em 0.4em;
+    overflow: hidden;
 }
+
+table tr td:first-child {
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+a {
+    color: #084771;
+}
+
+a:visited {
+    color: #5d2263;
+}
+
+
+
+
+header {
+    width: 100%;
+    background: #770000;
+    color:  #AB946C;
+    border-bottom: 5px solid #AB946C;
+    margin-bottom: 3em;
+
+}
+
+h1, h2 {
+    font-size: 3em; 
+}
+
+
+h2 {
+    color: #770000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2:after {
+    content: "";
+    border-top: 5px solid #AB946C;
+    width: 100%;
+
+
+}
+
